# ibt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  input.koubp  tree.dot
doc/: .~lock.lltable.ods#  .~lock.lltable.xlsx#  lltable.ods  lltable.xlsx
doc/ibt/: fitthesis.cls  xkouma02-01-kapitoly-chapters.tex  xkouma02-01-kapitoly-chapters.te~  xkouma02-20-literatura-bibliography.bib  xkouma02.bbl  xkouma02.ptc  xkouma02.tex
doc/itt/tz/: Makefile  gramatik.txt  grammars.txt  tz.tex
doc/thesis/: Makefile  fitthesis.cls  xkouma02-01-kapitoly-chapters.tex  xkouma02-01-kapitoly-chapters.te~  xkouma02-20-literatura-bibliography.bib  xkouma02-30-prilohy-appendices.tex  xkouma02-30-prilohy-appendices.te~  xkouma02.dot  xkouma02.qrs  xkouma02.tex  xkouma02.tod
doc/thesis/.kile/: bakalarka.kilepr.gui
doc/thesis/bib-styles/Pysny/: enplain.bst
doc/thesis/obrazky-figures/: ast_node_hierarchy.eps  class_diagram.eps  derivacni_krok_bkg.eps  derivacni_krok_bkg_out.eps  dva_derivacni_stromy.eps  empty.eps  expression_hierarchy.eps  faktorizace.eps  first.eps  funcdef_hierarchy.eps  ka_diagram_prechodu.eps  leva_rekurze.eps  parsers_class_diagram.eps  rza_expanze.eps  rza_pop.eps  statement_hierarchy.eps  volani_funkce.eps  za_diagram_prechodu.eps
doc/thesis/svg-inkscape/: derivacni_krok_bkg_svg-tex.pdf_tex
misc/: generator.py  lltable.txt  vector.txt
src/: CMakeLists.txt  aux.hpp  bruh.cpp  grammar_1.cpp  grammar_2.cpp  grammar_3.cpp  grammar_4.cpp  grammar_5.cpp  grammar_6.cpp  grammar_factory.cpp  ll_table.cpp  main.cpp  nonterminal.cpp  pushdown.cpp  stack_item.cpp  token.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast.hpp  ast_node.hpp  ast_node_factory.cpp  ast_node_factory.hpp
src/ast/expression/: CMakeLists.txt  binary_expression.cpp  binary_expression.hpp  constant.cpp  constant.hpp  decl_or_exp.cpp  decl_or_exp.hpp  expression.hpp  function_call.cpp  function_call.hpp  operand.hpp  operator.cpp  operator.hpp  single_operand.hpp  unary_expression.cpp  unary_expression.hpp  variable.cpp  variable.hpp
src/ast/statements/: CMakeLists.txt  code_block.cpp  code_block.hpp  declaration.cpp  declaration.hpp  elseif_statement.cpp  elseif_statement.hpp  for_loop.cpp  for_loop.hpp  function_definition.cpp  function_definition.hpp  if_statement.cpp  if_statement.hpp  return_statement.cpp  return_statement.hpp  semicolon.hpp  statement.hpp  statement_list.cpp  statement_list.hpp  while_loop.cpp  while_loop.hpp
src/exceptions/: CMakeLists.txt  analysis_success.hpp  change_parser.hpp  cl_arguments_error.hpp  empty_stack.hpp  exception_base.cpp  exception_base.hpp  function_parsed.hpp  help.hpp  internal_error.hpp  invalid_cmd_arguments.hpp  invalid_symbol.hpp  lexical_error.hpp  syntax_error.hpp
src/grammars/: CMakeLists.txt  grammar.hpp  grammar_1.cpp  grammar_1.hpp  grammar_2.cpp  grammar_2.hpp  grammar_3.cpp  grammar_3.hpp  grammar_4.cpp  grammar_4.hpp  grammar_5.cpp  grammar_5.hpp  grammar_6.cpp  grammar_6.hpp  grammar_factory.cpp  grammar_factory.hpp
src/headers/: CMakeLists.txt  bruh.hpp  grammar.hpp  grammar_1.hpp  grammar_2.hpp  grammar_3.hpp  grammar_4.hpp  grammar_5.hpp  grammar_6.hpp  grammar_factory.hpp  ll_table.hpp  pushdown.hpp  stack_item.hpp  table_index.hpp  token.hpp
src/headers/grammars/: CMakeLists.txt  grammar_1.hpp  grammar_3.hpp  grammar_5.hpp
src/headers/tables/: ll_table.hpp
src/headers/types/: item_type.hpp  nonterminal.hpp  nonterminal_type.hpp  stack_item.hpp  token.hpp  token_type.hpp
src/lex/: CMakeLists.txt  lex.cpp  lex.hpp  lex.l  lex.yy.cc  lex.yy.h
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/parsers/: CMakeLists.txt  end_insertor.cpp  end_insertor.hpp  expression_processor.cpp  expression_processor.hpp  parser.cpp  parser.hpp  pattern_finder.cpp  pattern_finder.hpp  precedence.cpp  precedence.hpp  precedence_parser.cpp  precedence_parser.hpp  predictive.cpp  predictive.hpp  predictive_parser.cpp  predictive_parser.hpp  symbol_handler.cpp  symbol_handler.hpp
src/pushdowns/: CMakeLists.txt  pushdown.cpp
src/tables/: CMakeLists.txt  ll_table.cpp  ll_table.hpp  precedence_table.cpp  precedence_table.hpp  table_index.hpp
src/types/: CMakeLists.txt  expression.cpp  expression.hpp  nonterminal.cpp  nonterminal.hpp  precedence_symbol.cpp  precedence_symbol.hpp  stack_item.cpp  stack_item.hpp  token.cpp  token.hpp
test/: CMakeLists.txt  precedence_parser_tests.cpp  precedence_parser_tests_fail.cpp  precedence_parser_tests_success.cpp  predictive_parser_tests.cpp  predictive_parser_tests_fail.cpp  predictive_parser_tests_success.cpp  return0.cpp  sample.cpp  test.sh
test/koubp_files/: binary_to_decimal.koubp  fibonacci.koubp  palindrome.koubp  power.koubp  sum_of_digits.koubp
test/koubp_files/basic_constructs/: expressions.koubp  for_loop.koubp  function_definition.koubp  if_statement.koubp  while_loop.koubp
test/koubp_files/extreme_cases/: lots_of_semicolons.koubp  nested_code_blocks.koubp  nested_constructs.koubp
test/koubp_files/simple_algorithms/: binary_to_decimal.koubp  decimal_to_binary.koubp  factorial.koubp  is_even.koubp  is_prime.koubp  power.koubp  sum_of_digits.koubp  vowel_count.koubp
test/koubp_files/syntax_error_files/: functioncall_reduntant_comma.koubp  functiondefinition_missing_colon_notype.koubp  invalid_expression.koubp  missing_lbrace.koubp  missing_rbrace.koubp  missing_semicolon.koubp  missing_semicolon_2.koubp
test/unit_tests/: CMakeLists.txt  common.cpp  common.hpp  main.cpp
test/unit_tests/ast/: CMakeLists.txt  ast_linking_tests.cpp  ast_node_factory_tests.cpp
test/unit_tests/aux_classes/: CMakeLists.txt  end_insertor_tests.cpp  expression_processor_tests.cpp  pattern_finder_tests.cpp
test/unit_tests/parser_aux_classes/: CMakeLists.txt  common.cpp  common.hpp  end_insertor_tests.cpp  expression_processor_tests.cpp  pattern_finder_tests.cpp
test/unit_tests/parsers/: CMakeLists.txt  precedence_parser_tests_fail.cpp  precedence_parser_tests_success.cpp  predictive_parser_tests_fail.cpp  predictive_parser_tests_success.cpp
